--- a/report.tex
+++ b/report.tex
@@ -35,6 +35,12 @@
 \usepackage{subfig}
 \usepackage{rotating,tabularx}
 
+% For positioning diagrams and showing urls nicely in diagram captions.
+
+\usepackage{float}
+\usepackage{rotating}
+\usepackage{url}
+
 % Automatically set the PDF metadata fields
 \makeatletter
 \AtBeginDocument{\hypersetup{pdftitle = {\@title}, pdfauthor = {\@author}}}
@@ -121,6 +127,77 @@
 
 \section{Introduction}
 
+\section{Open Source SDN Components}
+
+Even though the concept of software defined networking dates back to year 2004 \cite{robert2012system} the first widely recognised applications followed only several years later. The most notable one is the widespread OpenFlow protocol which made its official debut in 2009 and has since become the most prevalent protocol for SDN.  The available applications on the market reflect the pervasiveness of OpenFlow as practically all of them are built to support the protocol. Keeping SDN’s basic concepts and architectural solutions in mind it doesn’t come as a surprise that the network controllers and switch implementations are the most common SDN related applications. In this section, we present a comprehensive survey of existing open source components for SDN.
+
+\subsection{Controllers}
+
+Most OpenFlow controllers are organized in the same fashion as shown in figure ~\ref{fig:architecture}. Most of the current controllers offer a so-called Northbound interface (usually a REST API) to communicate with applications and to offer them services. The southbound interface is for communicating with the actual physical and virtual switches in the network.
+
+\begin{figure}[h!t]
+\centering
+\floatstyle{boxed}
+\includegraphics[width=110mm]{"Controller architecture diagram".jpg}
+\caption{General SDN controller architecture}
+\label{fig:architecture}
+\end{figure}
+
+	Hailed as the first OpenFlow controller, NOX was developed side-by-side with OpenFlow but peculiarly released a year before OpenFlow’s official release. NOX is written in C++ and is meant for developing further customised SDN controllers, but it is commonly regarded as complex and cumbersome to use for anything but really performance critical applications. The developer Murphy McCauley himself recommends using POX, the Python version of NOX, for most tasks \cite{CHU12}. There is also a newer version of NOX that according to developers has more streamlined architecture, cleaner codebase and is more efficient. At the time of writing this the latest modification to source code was an over 7 months old bugfix, so NOX’s actual viability in current SDN development is questionable.
+
+	Beacon is another notable OF controller. It was released in 2010 and it’s written in Java. Despite Java’s reputation as an inefficient programming language Beacon has fared well performance-wise in comparison with other controllers \cite{Erickson13}. Java was chosen to address C’s and C++’s portability problems and to reduce developer’s burden with significantly shorter compilation times and better error logging. Other controllers with similar focus on easier development are for example Python-based Ryu and Ruby-based Trema.
+
+One of the features that makes Beacon perhaps more notable than other aforementioned controllers is the fact that it serves as basis for one of the most popular OpenFlow controllers: Floodlight. Floodlight is developed by Big Switch Networks, a startup founded by networking veterans. Unlike Beacon, Floodlight doesn’t rely on OSGi framework and offers more features such as REST API and support for non-OpenFlow domains. The documentation for Floodlight is also generally good and surpasses the Beacon documentation with ease.
+ Big Switch has in the past lobbied for Floodlight to be included in Open Daylight Project’s codebase \cite{BAN13} but the project opted for Cisco’s controller implementation. 
+
+Open Daylight Project, or ODP in shorthand, is commonly considered the leading SDN project with it’s substantial company backing and large developer community. The project members involved include practically every company relevant to the field. These are for instance Cisco, Microsoft, IBM, Hewlett-Packard, Juniper, Red Hat and VMware and many more. Feature highlights of Open Daylight include  a robust REST API and south-bound communication which allows for using other non-Openflow protocols: OVSDB, NETCONF, LISP, BGP, PCEP and SNMP. Naturally ODP contains components to take advantage of the protocols as well as other components not found in any other SDN projects e.g. DDOS detection and counter-measures The basic architecture is rather similar to other controllers, but different core components, applications built on top of them and protocol plugins offer different services and use different interface. Figure ~\ref{fig:ODL} shows the architecture and some of the components in the bundle. For prototyping applications that only make use of OpenFlow the sheer number of different components in ODP may be intimidating and distracting, but generally ODP community offers decent documentation and guides though quality varies from one component to another. In comparison with Floodlight ODP is likely to be more viable in real business environment because of the features it offers and fast evolving nature but when developing quick prototypes or SDN applications that only make use of OpenFlow, Floodlight may be a better choice due to it being simpler, smaller and at the moment better documented.
+
+\begin{figure}[h!t]
+\centering
+\floatstyle{boxed}
+\includegraphics[width=110mm]{"ODL Diagram".jpg}
+\caption{Open Daylight architecture}
+\label{fig:ODL}
+\end{figure}
+
+Other lesser known controllers and controller frameworks are for example a very bare bones Libfluid, Java-based Maestro, On.Lab’s Flowvisor which is meant to be used with other On.Lab’s SDN components, FLOWer which is written with Erlang, the event-driven Resonance, Node.js -based NodeFlow, lesser-known KulCloud Open MUL and SNAC, flowforwarding.org’s Warp, network virtualization bundle Open VNet, IRIS which uses Floodlight and Beacon components to offer horizontal scalability and Juniper’s OpenContrail focusing on SDN and Big Data. Generally these pieces of software are either not in active development or not as well received or otherwise as notable as the controllers mentioned earlier.
+
+\subsection{Switches}
+
+OpenFlow relies fundamentally on switches: there has to be at least one in the network to connect to a controller, otherwise using OpenFlow is not possible. OpenFlow being near synonymous to SDN and network functions virtualisation or NFV being a hot topic for conversation along with SDN there’s a demand and supply for standardised, vendor-agnostic virtual and physical switches. With SDN and network virtualization it is possible to eliminate the need for specialised switches, routers, middleboxes etc. and utilise the network elements on ordinary X86 servers.
+
+VMWare’s Open VSwitch is undoubtedly the most well known of virtual switches. It has been ported to multiple virtualization platforms such as VirtualBox
+and KVM, is included in few Linux kernels and bundled with many SDN projects and is also integrated to various virtual management systems like OpenStack. Open VSwitch offers many features like several QoS and security components and it supports few different protocols.
+
+Other software switches include Indigo Virtual Switch meant to be used with Floodlight and Indigo framework, CPqD’s OFSoftwsitch, LINC-switch, Snabb.co’s virtualized ethernet switch called Snabb Switch and protocol oblivious POFSwitch. The previously mentioned open VNet also includes a virtual switch. 
+
+Other switch related projects are Centec’s Lantern which includes a modified Open VSwitch but is mainly design for implementing custom  hardware based SDN switches with accompanying software bundle. Other partly similar software is Pantou. It can be used to turn normal commercial routers to OpenFlow-enabled switches.
+
+\subsection{Testing and Simulating}
+
+Like in any other field in computer science, fast and professional development and research is supported by tools for testing and quality assurance. SDN technology is not an exception. Tools fall roughly in two categories: Some are used for simulating networks and network events while others focus on performance benchmarking and monitoring.
+
+The most well known tool for simulating networks is Mininet. Mininet could be considered essential for conducting research on SDN and testing software in a realistic network environment. Mininet supports custom network topologies which can be easily created with its Python API and its switches support OpenFlow. Connecting to real networks should be quite straightforward though a single Linux OS can support  over four thousand switches and hosts simultaneously \cite{MN14}. 
+
+A little bit more specific tool is STS which stands for SDN Troubleshooting System. It can be used to simulate and troubleshoot specific devices on the network. A bit similar program is ns-3 which is used for simulating network events. For performance testing and benchmarking there are OFLOPS and PerfSonar and for testing SDN software itself one can utilize NICE for controller applications, OFTest for compliance testing and TestOn for testing automatization. It’s also worth to mention HyperGlance by Real Status. It is a network visualization tool which supports Open Daylight. It could most likely to be used for debugging as in addition to network topology it displays traffic too. Unlike other pieces of software mentioned HyperGlance isn’t an open source project or free software, but at the time of writing it was in open beta phase and acquiring the software required only registration to the site.
+
+\subsection{Other SDN projects}
+
+Apart from controllers, switches, testing and simulation tools there are many notable projects that don’t straightforwardly fall into these categories.
+
+There hasn’t been as much talk about security with SDN as there have been on for example network virtualization, but the centralized network control introduces fundamental vulnerabilities that need to be addressed. Roy Chua of SDNCentral.com points out, that the SDN controller should always be closely controlled and also protected from an outside attack like DDOS because without it SDN network's functionality is crippled \cite{CHU2} . Other aspects to be aware of are protecting communication throughout the network and maintaining and monitoring network performance and function. Open Daylight for example includes a component for protection from Denial of Service attacks and OpenFlowSec.org offers multiple security solutions for SDN ranging from malware protection to security policy enforcement.
+
+Other projects aim to enhance the performance of the network. InCntre’s Flowscale is a network load balancer, but the development has stopped after version 0.6. This may be because of many controller applications including load balancer of their own. Both the BIRD by CZ.NIC Labs and CPqD’s RouteFlow offer IP routing.
+
+Some components are made to enhance SDN development. These include domain specific languages like Frenetic and Pyretic developed in Princeton University and Haskell based Nettle from Yale university. In same vein there’s Snabb Switch FlowForwarding.org offers protocol libraries for NetConf and OpenFlow written in Erlang, Midokura has one for OpenFlow written in Python and Ericsson provides a library made with Node.js . They are named enetconf, of\_protocol, OpenFaucet and Oflib-Node respectively. 
+
+Other various project include Big Switch’s Indigo, a hardware abstraction layer and configuration layer meant for communication between floodlight and the physical layer, MirageOS, used for constructing unikernels for network applications, wakame-vdc for data center virtualization and for wireless communication there is nwEPC - EPC SAE Gateway by Thomas Batia and Open Source IMS Core from Fraunhofer Fokus and OpenEPC of which latter is not an open source project but otherwise worth mentioning in this context. 
+
+EU has various research projects under moniker Seventh Framework Programme (FP7) which has produced both research and open source software. Some individual projects in FP7 like FELIX and OFELIA and FIRE research test-beds for use and frameworks for using them (OFELIA). Other projects focus more straightforwardly to OpenFlow. ALIEN project for instance offers an OpenFlow enabling hardware abstraction layer for non-OpenFlow enabled devices and integration with OFELIA whereas OFERTIE aims to improve delivery of real-time interactive applications on the networks. SPARC project aims to enhance standard SDN architecture by splitting the control and forwarding functions by utilizing MPLS.
+
+
+
+
 
 \clearpage
 
@@ -139,8 +216,8 @@
 %
 % instead.
 
-%\bibliographystyle{babplain-lf}
-\bibliographystyle{plain}
+\bibliographystyle{babplain-lf}
+% \bibliographystyle{plain}
 \bibliography{references}
 
 
