Added few new references to projects

--- a/references.bib
+++ b/references.bib
@@ -33,7 +33,7 @@
 
 @MISC{BAN13,
   author = {Banks, Ethan},
-  title = {Big Switch Leaves OpenDaylight, Toutes White-Box Future},
+  title = {{Big Switch} Leaves {OpenDaylight}, Toutes White-Box Future},
   publisher = {networkcomputing.com},
   url = {http://www.networkcomputing.com/networking/big-switch-leaves-opendaylight-touts-white-box-future/a/d-id/1234231?}
 }
@@ -58,7 +58,7 @@
 
 @MISC{CHU12,
   author = {Chua, Roy},
-  title = {NOX, POX and Controllers Galore – Murphy McCauley Interview},
+  title = {{NOX, POX} and Controllers Galore – {Murphy McCauley} Interview},
   year = {2012},
   publisher = {SDNCentral},
   url = {http://www.sdncentral.com/sdn-nfv-open-source/nox-pox-controllers-murphy-mccauley/2012/09/}
@@ -85,7 +85,7 @@
 
 @INPROCEEDINGS{Erickson13,
   author = {Erickson, David},
-  title = {The Beacon Openflow Controller},
+  title = {The {Beacon Openflow} Controller},
   booktitle = {Proceedings of the Second ACM SIGCOMM Workshop on Hot Topics in Software
 	Defined Networking},
   year = {2013},
@@ -380,7 +380,7 @@
 }
 
 @OTHER{CHU2,
-  title = {Security Challenges in SDN},
+  title = {Security Challenges in {SDN}},
   url = {http://www.sdncentral.com/security-challenges-sdn-software-defined-networks/},
   urldate = {06-08-2014}
 }
@@ -397,3 +397,40 @@
   url = {http://OpenFlowSwitch.org}
 }
 
+@OTHER{NOX,
+  title = {NOX Controller},
+  url = {http://www.noxrepo.org/nox/about-nox/},
+  urldate = {07-08-2014}
+}
+
+@OTHER{POX,
+  title = {POX Controller},
+  url = {http://www.noxrepo.org/pox/about-pox/},
+  urldate = {07-08-2014}
+}
+
+@OTHER{Ryu,
+  title = {Ryu Controller},
+  url = {http://osrg.github.io/ryu/},
+  urldate = {07-08-2014}
+}
+
+@OTHER{Trema,
+  title = {Trema Controller},
+  url = {http://trema.github.io/trema/},
+  urldate = {07-08-2014}
+}
+
+@OTHER{Beacon,
+	title = {Beacon Controller},
+	url = {https://openflow.stanford.edu/display/Beacon/Home},
+	urldate = {07-08-2014}
+}
+
+@OTHER{Floodlight,
+  title = {Floodlight Project},
+  url = {http://www.projectfloodlight.org/floodlight/},
+  urldate = {07-08-2014}
+}
+
+	
