Controller references in place

--- a/references.bib
+++ b/references.bib
@@ -463,8 +463,8 @@
   urldate = {07-08-2014}
 }
 	
-@OTHER{FlowER,
-  title = {FlowER},
+@OTHER{Flower,
+  title = {FLOWer},
   url = {https://github.com/travelping/flower},
   urldate = {07-08-2014}
 }
@@ -503,5 +503,11 @@
   title = {Warp},
   url = {http://flowforwarding.github.io/warp/},
   urldate = {07-08-2014}
+}
+
+@OTHER{Nodeflow,
+	title = {NodeFlow},
+	url = {http://garyberger.net/?p=537},
+	  urldate = {07-08-2014}
 }
 
