--- a/report.tex
+++ b/report.tex
@@ -160,7 +160,7 @@ Open Daylight Project \cite{ODL}, or ODP in shorthand, is commonly considered th
 \label{fig:ODL}
 \end{figure}
 
-Other lesser known controllers and controller frameworks are for example a very bare bones Libfluid, Java-based Maestro, On.Lab’s Flowvisor which is meant to be used with other On.Lab’s SDN components, FLOWer which is written with Erlang, the event-driven Resonance, Node.js -based NodeFlow, lesser-known KulCloud Open MUL and SNAC, flowforwarding.org’s Warp, network virtualization bundle Open VNet, IRIS which uses Floodlight and Beacon components to offer horizontal scalability and Juniper’s OpenContrail focusing on SDN and Big Data. Generally these pieces of software are either not in active development or not as well received or otherwise as notable as the controllers mentioned earlier.
+Other lesser known controllers and controller frameworks are for example a very bare bones Libfluid \cite{Libfluid}, Java-based Maestro \cite{Maestro}, On.Lab’s Flowvisor \cite{FlowVisor} which is meant to be used with other On.Lab’s SDN components, FLOWer \cite{Flower} which is written with Erlang, the event-driven Resonance\cite{Resonance}, Node.js -based NodeFlow \cite{Nodeflow}, lesser-known KulCloud Open MUL and SNAC\ cite{MUL, SNAC}, flowforwarding.org’s Warp \cite{Warp}, network virtualization bundle Open VNet \cite{VNet}, IRIS which uses Floodlight and Beacon components to offer horizontal scalability \cite{IRIS} and Juniper’s OpenContrail focusing on SDN and Big Data \cite{Contrail}. Generally these pieces of software are either not in active development or not as well received or otherwise as notable as the controllers mentioned earlier.
 
 \subsection{Switches}
 
