added some text for section 2

--- a/references.bib
+++ b/references.bib
@@ -511,3 +511,53 @@
 	  urldate = {07-08-2014}
 }
 
+@ARTICLE{FRZ13,
+ author = {Feamster, Nick and Rexford, Jennifer and Zegura, Ellen},
+ title = {The Road to SDN},
+ journal = {Queue},
+ issue_date = {December 2013},
+ volume = {11},
+ number = {12},
+ month = dec,
+ year = {2013},
+ url = {http://doi.acm.org/10.1145/2559899.2560327},
+ doi = {10.1145/2559899.2560327},
+ acmid = {2560327},
+ publisher = {ACM},
+ address = {New York, NY, USA}
+}
+
+@inproceedings{Yap10a,
+ author = {Yap, Kok-Kiong and Sherwood, Rob and Kobayashi, Masayoshi and Huang, Te-Yuan and Chan, Michael and Handigol, Nikhil and McKeown, Nick and Parulkar, Guru},
+ title = {Blueprint for Introducing Innovation into Wireless Mobile Networks},
+ booktitle = {Proceedings of the Second ACM SIGCOMM Workshop on Virtualized Infrastructure Systems and Architectures},
+ series = {VISA '10},
+ year = {2010},
+ isbn = {978-1-4503-0199-2},
+ location = {New Delhi, India},
+ url = {http://doi.acm.org/10.1145/1851399.1851404},
+ doi = {10.1145/1851399.1851404},
+ acmid = {1851404},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+
+}
+
+@article{Yap10b,
+ author = {Yap, Kok-Kiong and Kobayashi, Masayoshi and Sherwood, Rob and Huang, Te-Yuan and Chan, Michael and Handigol, Nikhil and McKeown, Nick},
+ title = {OpenRoads: Empowering Research in Mobile Networks},
+ journal = {SIGCOMM Comput. Commun. Rev.},
+ issue_date = {January 2010},
+ volume = {40},
+ number = {1},
+ month = jan,
+ year = {2010},
+ issn = {0146-4833},
+ url = {http://doi.acm.org/10.1145/1672308.1672331},
+ doi = {10.1145/1672308.1672331},
+ acmid = {1672331},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+}
+
+
