Updated until OpenEPC

--- a/references.bib
+++ b/references.bib
@@ -560,4 +560,86 @@
  address = {New York, NY, USA},
 }
 
+@online{Lor14,
+ author = {Lorema}, 
+title = {about OpenWRT}, 
+year = {2014}, 
+url = {http://wiki.openwrt.org/about/start}, 
+urldate = {30-07-2014}
+}
+
+@online{Sve14,
+ title = {TP-Link TL-1043ND}, 
+url = {http://wiki.openwrt.org/toh/tp-link/tl-wr1043nd}, 
+urldate = {30-07-2014}
+}
+
+@INPROCEEDINGS{Wol13, 
+author={John, W. and Pentikousis, K. and Agapiou, G. and Jacob, E. and Kind, M. and Manzalini, A and Risso, F. and Staessens, D. and Steinert, R. and Meirosu, C.}, 
+booktitle={Future Networks and Services (SDN4FNS), 2013 IEEE SDN for}, 
+title={Research Directions in Network Service Chaining}, 
+year={2013}, 
+month={Nov} 
+}
+
+@techreport{Bjo10, 
+AUTHOR = "M. Bjorklund", 
+TITLE = "{YANG - A Data Modeling Language for the Network Configuration Protocol (NETCONF)}", 
+TYPE="{RFC}", 
+NUMBER=6020, 
+YEAR = {2010}, 
+MONTH = {October},
+INSTITUTION = "{Internet Engineering Task Force}", 
+URL={http://tools.ietf.org/html/rfc6020}
+ }
+
+
+@online{MDS,
+ title = {OpenDaylight Controller:MD-SAL:Architecture}, 
+url = {https://wiki.opendaylight.org/view/OpenDaylight_Controller:MD-SAL:Architecture}, 
+urldate = {04-08-2014}
+}
+
+@online{Netconf,
+ title = {OpenDaylight Controller:Config:Examples:Netconf}, 
+url = {https://wiki.opendaylight.org/view/OpenDaylight_Controller:MD-SAL:Architecture}, 
+urldate = {04-08-2014}
+}
+
+
+
+@online{ODLLISP,
+ title = {OpenDaylight Lisp Flow Mappin:Architecture}, 
+url = {https://wiki.opendaylight.org/view/OpenDaylight_Lisp_Flow_Mapping:Architecture}, 
+urldate = {6-08-2014}
+}
+
+@techreport{OpenEPC, 
+title = {{OpenEPC, building your own complete mobile broadband operator network testbed}}, 
+group = {Fraunhofer FOKUS}, 
+type = {White Paper},
+institution = {Fraunhofer Institute for Open Communication Systems FOKUS},  
+url = {http://www.openepc.net/_docs/OpenEPC-Whitepaper_nov2012.pdf}
+}
+
+@online{Yia04,
+author = {Yiannis Yiakoumis}, 
+title = {Pantou : OpenFlow 1.0 for OpenWRT}, 
+year = {2004}, 
+url = {http://archive.openflow.org/wk/index.php/Pantou_:_OpenFlow_1.0_for_OpenWRT}, 
+urldate = {29-07-2014}
+}
+
+@INPROCEEDINGS{OKH14,
+author = {Okada, Kazuya and Hazeyama, Hiroaki and Kadobayashi, Youki},
+title = {Oblivious DDoS Mitigation with Locator/ID Separation Protocol},
+booktitle = {Proceedings of The Ninth International Conference on Future Internet Technologies},
+year = {2014},
+location = {Tokyo, Japan},
+url = {http://doi.acm.org/10.1145/2619287.2619291},
+doi = {10.1145/2619287.2619291},
+publisher = {ACM},
+address = {New York, NY, USA}
+}
+
 
