Added switch references

--- a/references.bib
+++ b/references.bib
@@ -511,6 +511,48 @@
 	  urldate = {07-08-2014}
 }
 
+@OTHER{VSwitch,
+	title = {Open VSwitch},
+	url = {http://openvswitch.org/},
+	  urldate = {08-08-2014}
+}
+
+@OTHER{IndigoSwitch,
+	title = {Indigo Virtual Switch},
+	url = {http://www.projectfloodlight.org/indigo-virtual-switch/},
+	  urldate = {08-08-2014}
+}
+
+@OTHER{OfSwitch,
+	title = {OFSoftswitch},
+	url = {https://github.com/CPqD/ofsoftswitch13},
+	  urldate = {08-08-2014}
+}
+
+@OTHER{LINC,
+	title = {LINC-switch},
+	url = {https://github.com/FlowForwarding/LINC-Switch},
+	  urldate = {08-08-2014}
+}
+
+@OTHER{Snabb,
+	title = {Snabb Switch},
+	url = {https://github.com/SnabbCo/snabbswitch},
+	  urldate = {08-08-2014}
+}
+
+@OTHER{POFSwitch,
+	title = {POFSwitch},
+	url = {http://www.poforwarding.org/},
+	  urldate = {08-08-2014}
+}
+
+@OTHER{Lantern,
+	title = {Lantern},
+	url = {https://github.com/CentecNetworks/Lantern},
+	  urldate = {08-08-2014}
+}
+
 @ARTICLE{FRZ13,
  author = {Feamster, Nick and Rexford, Jennifer and Zegura, Ellen},
  title = {The Road to SDN},
