--- a/report.tex
+++ b/report.tex
@@ -145,7 +145,7 @@ Most OpenFlow controllers are organized in the same fashion as shown in figure ~
 
 	Hailed as the first OpenFlow controller, NOX was developed side-by-side with OpenFlow but peculiarly released a year before OpenFlow’s official release \cite{NOX}. NOX is written in C++ and is meant for developing further customised SDN controllers, but it is commonly regarded as complex and cumbersome to use for anything but really performance critical applications. The developer Murphy McCauley himself recommends using POX \cite{POX}, the Python version of NOX, for most tasks \cite{CHU12}. There is also a newer version of NOX that according to developers has more streamlined architecture, cleaner codebase and is more efficient. At the time of writing this the latest modification to source code was an over 7 months old bugfix, so NOX’s actual viability in current SDN development is questionable.
 
-	Beacon is another notable OF controller \cite{Beacon}. It was released in 2010 and it’s written in Java. Despite Java’s reputation as an inefficient programming language Beacon has fared well performance-wise in comparison with other controllers \cite{Erickson13}. Java was chosen to address C’s and C++’s portability problems and to reduce developer’s burden with significantly shorter compilation times and better error logging. Other controllers with similar focus on easier development are for example Python-based Ryu \cite{Ryu} and Ruby-based Trema \cite{Trema}.
+	Beacon is another ntremaotable OF controller \cite{Beacon}. It was released in 2010 and it’s written in Java. Despite Java’s reputation as an inefficient programming language Beacon has fared well performance-wise in comparison with other controllers \cite{Erickson13}. Java was chosen to address C’s and C++’s portability problems and to reduce developer’s burden with significantly shorter compilation times and better error logging. Other controllers with similar focus on easier development are for example Python-based Ryu \cite{Ryu} and Ruby-based Trema \cite{Trema}.
 
 One of the features that makes Beacon perhaps more notable than other aforementioned controllers is the fact that it serves as basis for one of the most popular OpenFlow controllers: Floodlight \cite{Floodlight}. Floodlight is developed by Big Switch Networks, a startup founded by networking veterans. Unlike Beacon, Floodlight doesn’t rely on OSGi framework and offers more features such as REST API and support for non-OpenFlow domains. The documentation for Floodlight is also generally good and surpasses the Beacon documentation with ease.
  Big Switch has in the past lobbied for Floodlight to be included in Open Daylight Project’s codebase \cite{BAN13} but the project opted for Cisco’s controller implementation. 
@@ -166,12 +166,12 @@ Other lesser known controllers and controller frameworks are for example a very 
 
 OpenFlow relies fundamentally on switches: there has to be at least one in the network to connect to a controller, otherwise using OpenFlow is not possible. OpenFlow being near synonymous to SDN and network functions virtualisation or NFV being a hot topic for conversation along with SDN there’s a demand and supply for standardised, vendor-agnostic virtual and physical switches. With SDN and network virtualization it is possible to eliminate the need for specialised switches, routers, middleboxes etc. and utilise the network elements on ordinary X86 servers.
 
-VMWare’s Open VSwitch is undoubtedly the most well known of virtual switches. It has been ported to multiple virtualization platforms such as VirtualBox
+VMWare’s Open VSwitch is undoubtedly the most well known of virtual switches \cite{VSwitch}. It has been ported to multiple virtualization platforms such as VirtualBox
 and KVM, is included in few Linux kernels and bundled with many SDN projects and is also integrated to various virtual management systems like OpenStack. Open VSwitch offers many features like several QoS and security components and it supports few different protocols.
 
-Other software switches include Indigo Virtual Switch meant to be used with Floodlight and Indigo framework, CPqD’s OFSoftwsitch, LINC-switch, Snabb.co’s virtualized ethernet switch called Snabb Switch and protocol oblivious POFSwitch. The previously mentioned open VNet also includes a virtual switch. 
+Other software switches include Indigo Virtual Switch meant to be used with Floodlight and Indigo framework \cite{IndigoSwitch}, CPqD’s OFSoftswitch \cite{OfSwitch}, LINC-switch \cite{LINC}, Snabb.co’s virtualized ethernet switch called Snabb Switch \cite{Snabb} and protocol oblivious POFSwitch \cite{POFSwitch. The previously mentioned open VNet also includes a virtual switch \cite{Vnet}. 
 
-Other switch related projects are Centec’s Lantern which includes a modified Open VSwitch but is mainly design for implementing custom  hardware based SDN switches with accompanying software bundle. Other partly similar software is Pantou. It can be used to turn normal commercial routers to OpenFlow-enabled switches.
+Other switch related projects are Centec’s Lantern \cite{Lantern} which includes a modified Open VSwitch but is mainly design for implementing custom  hardware based SDN switches with the accompanying software bundle. Other partly similar software is Pantou \cite{Yia04}. It can be used to turn normal commercial routers to OpenFlow-enabled switches.Pantou will be discussed more in-depth later in the report.
 
 \subsection{Testing and Simulating}
 
