Added references to testing & Simulating

--- a/references.bib
+++ b/references.bib
@@ -553,6 +553,51 @@
 	  urldate = {08-08-2014}
 }
 
+@OTHER{STS,
+	title = {SDN Troubleshooting System},
+	url = {http://ucb-sts.github.io/sts/},
+	urldate = {08-08-2014}
+}
+
+@OTHER{NS3,
+	title = {ns-3},
+	url = {http://www.nsnam.org/},
+	urldate = {08-08-2014}
+}
+@OTHER{OFLOPS,
+	title = {OFLOPS},
+	url = {http://archive.openflow.org/wk/index.php/Oflops},
+	urldate = {08-08-2014}
+}
+@OTHER{Perf,
+	title = {PerfSonar},
+	url = {http://fasterdata.es.net/performance-testing/perfsonar/},
+	urldate = {08-08-2014}
+}
+@OTHER{NICE,
+	title = {NICE},
+	url = {https://code.google.com/p/nice-of/},
+	urldate = {08-08-2014}
+}
+
+@OTHER{OFTest,
+	title = {OFTest},
+	url = {http://www.projectfloodlight.org/oftest/},
+	urldate = {08-08-2014}
+}
+
+@OTHER{TestOn,
+	title = {TestOn},
+	url = {https://github.com/Paxterra/TestON/},
+	urldate = {08-08-2014}
+}
+
+@OTHER{Hyper,
+	title = {HyperGlance},
+	url = {http://real-status.com/product/sdn},
+	urldate = {08-08-2014}
+}
+
 @ARTICLE{FRZ13,
  author = {Feamster, Nick and Rexford, Jennifer and Zegura, Ellen},
  title = {The Road to SDN},
