some small modifications

--- a/report.tex
+++ b/report.tex
@@ -209,7 +209,7 @@ As discussed earlier, network instruments are closed and proprietary, which is a
 \centering
 \floatstyle{boxed}
 \includegraphics[width=110mm]{"openroad architecture".jpg}
-\caption{OpenRoads Architecture \cite{Yap10b}}
+\caption{OpenRoad's Architecture \cite{Yap10b}}
 \label{fig:openroads}
 \end{figure}
 
