--- a/report.tex
+++ b/report.tex
@@ -169,7 +169,7 @@ OpenFlow relies fundamentally on switches: there has to be at least one in the n
 VMWare’s Open VSwitch is undoubtedly the most well known of virtual switches \cite{VSwitch}. It has been ported to multiple virtualization platforms such as VirtualBox
 and KVM, is included in few Linux kernels and bundled with many SDN projects and is also integrated to various virtual management systems like OpenStack. Open VSwitch offers many features like several QoS and security components and it supports few different protocols.
 
-Other software switches include Indigo Virtual Switch meant to be used with Floodlight and Indigo framework \cite{IndigoSwitch}, CPqD’s OFSoftswitch \cite{OfSwitch}, LINC-switch \cite{LINC}, Snabb.co’s virtualized ethernet switch called Snabb Switch \cite{Snabb} and protocol oblivious POFSwitch \cite{POFSwitch. The previously mentioned open VNet also includes a virtual switch \cite{Vnet}. 
+Other software switches include Indigo Virtual Switch meant to be used with Floodlight and Indigo framework \cite{IndigoSwitch}, CPqD’s OFSoftswitch \cite{OfSwitch}, LINC-switch \cite{LINC}, Snabb.co’s virtualized ethernet switch called Snabb Switch \cite{Snabb} and protocol oblivious POFSwitch \cite{POFSwitch}. The previously mentioned open VNet also includes a virtual switch \cite{VNet}. 
 
 Other switch related projects are Centec’s Lantern \cite{Lantern} which includes a modified Open VSwitch but is mainly design for implementing custom  hardware based SDN switches with the accompanying software bundle. Other partly similar software is Pantou \cite{Yia04}. It can be used to turn normal commercial routers to OpenFlow-enabled switches.Pantou will be discussed more in-depth later in the report.
 
@@ -177,9 +177,9 @@ Other switch related projects are Centec’s Lantern \cite{Lantern} which includ
 
 Like in any other field in computer science, fast and professional development and research is supported by tools for testing and quality assurance. SDN technology is not an exception. Tools fall roughly in two categories: Some are used for simulating networks and network events while others focus on performance benchmarking and monitoring.
 
-The most well known tool for simulating networks is Mininet \cite{MN14}. Mininet could be considered essential for conducting research on SDN and testing software in a realistic network environment. Mininet supports custom network topologies which can be easily created with its Python API and its switches support OpenFlow. Connecting to real networks should be quite straightforward though a single Linux OS can support  over four thousand switches and hosts simultaneously \cite{MN14}. 
+The most well known tool for simulating networks is Mininet. Mininet could be considered essential for conducting research on SDN and testing software in a realistic network environment. Mininet supports custom network topologies which can be easily created with its Python API and its switches support OpenFlow. Connecting to real networks should be quite straightforward though a single Linux OS can support  over four thousand switches and hosts simultaneously \cite{MN14}. 
 
-A little bit more specific tool is STS which stands for SDN Troubleshooting System \cite{STS}. It can be used to simulate and troubleshoot specific devices on the network. A bit similar program is ns-3 which is used for simulating network events \cite{NS3}. For performance testing and benchmarking there are OFLOPS and PerfSonar \cite{OFLOPS, Perf} and for testing SDN software itself one can utilize NICE \cite{NICE} for controller applications, OFTest for compliance testing \cite{OFTest} and TestOn for testing automatization \cite{TestOn}. It’s also worth to mention HyperGlance by Real Status \cite{Hyper}. It is a network visualization tool which supports Open Daylight. It could most likely to be used for debugging as in addition to network topology it displays traffic too. Unlike other pieces of software mentioned HyperGlance isn’t an open source project or free software, but at the time of writing it was in open beta phase and acquiring the software required only registration to the site.
+A little bit more specific tool is STS which stands for SDN Troubleshooting System. It can be used to simulate and troubleshoot specific devices on the network. A bit similar program is ns-3 which is used for simulating network events. For performance testing and benchmarking there are OFLOPS and PerfSonar and for testing SDN software itself one can utilize NICE for controller applications, OFTest for compliance testing and TestOn for testing automatization. It’s also worth to mention HyperGlance by Real Status. It is a network visualization tool which supports Open Daylight. It could most likely to be used for debugging as in addition to network topology it displays traffic too. Unlike other pieces of software mentioned HyperGlance isn’t an open source project or free software, but at the time of writing it was in open beta phase and acquiring the software required only registration to the site.
 
 \subsection{Other SDN projects}
 
